# Helios

./: .gitignore  CMakeLists.txt  Helios.txt
Helios/: CMakeLists.txt  main.cpp
Helios/Helios/2D/: Renderer2D.cpp  Renderer2D.h
Helios/Helios/2D/node/: Sprite2D.cpp  Sprite2D.h
Helios/Helios/asset/: Asset.h  AssetsManager.cpp
Helios/Helios/core/: Logger.h  defines.h  log.h
Helios/Helios/include/Helios/2D/: Renderer2D.h  Transform2D.h
Helios/Helios/include/Helios/2D/node/: Node2D.h
Helios/Helios/include/Helios/2D/shape/: Rectangle2D.h
Helios/Helios/include/Helios/asset/: Asset.h  AssetManager.h  AssetsManager.h  Texture.h
Helios/Helios/include/Helios/core/: Engine.h  Logger.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Window.h  defines.h  log.h
Helios/Helios/include/Helios/input/: Input.h
Helios/Helios/include/Helios/maths/: Color.h  Matrix4.h  Size.h  Transform2D.h  Vector2.h  Vector3.h  Vector4.h  maths.h
Helios/Helios/include/Helios/shader/: Shader.h  basic.frag
Helios/Helios/input/: Input.h
Helios/Helios/maths/: Color.cpp  Matrix4.h  Vector2.cpp  Vector4.h  maths.h
Helios/Helios/shader/: Shader.cpp  Shader.h  vert.glsl
Helios/Helios/src/Helios/2D/: Rectangle2D.cpp  Renderer2D.cpp  Transform2D.cpp
Helios/Helios/src/Helios/2D/shape/: Rectangle2D.cpp
Helios/Helios/src/Helios/asset/: AssetManager.cpp  AssetsManager.cpp  Texture.cpp
Helios/Helios/src/Helios/core/: Engine.cpp  Logger.cpp  Window.cpp
Helios/Helios/src/Helios/input/: Input.cpp
Helios/Helios/src/Helios/maths/: Matrix4.cpp  Transform2D.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Helios/Helios/src/Helios/shader/: Shader.cpp
Helios/Helios/utils/: FileUtils.cpp  FileUtils.h
Helios/include/Helios/core/: Logger.h  Window.h  defines.h  log.h
Helios/src/Helios/core/: Logger.cpp  Window.cpp
Sandbox/: CMakeLists.txt  main.cpp
